// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM behaviors bot with name 1`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-sender"
          >
            YveBot
          </div>
          <div
            class="yvebot-message"
          >
            Hello
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        placeholder="Type your message"
        rows="1"
      />
      <button
        class="yvebot-form-submit"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;

exports[`DOM behaviors bot with timestamp 1`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-sender"
          >
            Yvebot
          </div>
          <div
            class="yvebot-message"
          >
            Hello
          </div>
          <div
            class="yvebot-timestamp"
          >
            00:00:00
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        placeholder="Type your message"
        rows="1"
      />
      <button
        class="yvebot-form-submit"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;

exports[`DOM behaviors initial elements 1`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            Hello
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        placeholder="Type your message"
        rows="1"
      />
      <button
        class="yvebot-form-submit"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;

exports[`DOM behaviors user click on more options using maxOptions 1`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            Make your choice
          </div>
        </div>
        <div
          class="yvebot-message-bubbles yvebot-ruleType-SingleChoice"
        >
          <button
            class="yvebot-message-bubbleBtn"
            data-label="One"
            data-value="One"
          >
            One
          </button>
          <button
            class="yvebot-message-bubbleBtn"
            data-label="Two"
            data-value="Two"
          >
            Two
          </button>
          <button
            class="yvebot-message-bubbleBtn yvebot-message-bubbleMoreOptions"
            data-label="More options"
            data-value="More options"
          >
            More options
          </button>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        disabled=""
        placeholder="Choose an option above"
        rows="1"
      />
      <button
        class="yvebot-form-submit"
        disabled=""
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;

exports[`DOM behaviors user reply 1`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            Your name
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-user"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            James
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        placeholder="Type your message"
        rows="1"
        style="height: 0px;"
      />
      <button
        class="yvebot-form-submit"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;

exports[`DOM behaviors user reply with multiple choice 1`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            Make your choice
          </div>
        </div>
        <div>
          <div
            class="yvebot-message-bubbles yvebot-ruleType-MultipleChoice"
          >
            <button
              class="yvebot-message-bubbleBtn"
              data-label="One"
              data-value="One"
            >
              One
            </button>
            <button
              class="yvebot-message-bubbleBtn"
              data-label="Two"
              data-value="Two"
            >
              Two
            </button>
            <button
              class="yvebot-message-bubbleBtn"
              data-label="Three"
              data-value="Three"
            >
              Three
            </button>
          </div>
          <button
            class="yvebot-message-bubbleDone"
            style="display: none;"
          >
            Done
          </button>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        disabled=""
        placeholder="Choose the options above"
        rows="1"
      />
      <button
        class="yvebot-form-submit"
        disabled=""
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;

exports[`DOM behaviors user reply with single choice 1`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            Make your choice
          </div>
        </div>
        <div
          class="yvebot-message-bubbles yvebot-ruleType-SingleChoice"
        >
          <button
            class="yvebot-message-bubbleBtn"
            data-label="One"
            data-value="One"
          >
            One
          </button>
          <button
            class="yvebot-message-bubbleBtn"
            data-label="Two"
            data-value="Two"
          >
            Two
          </button>
          <button
            class="yvebot-message-bubbleBtn"
            data-label="Three"
            data-value=""
          >
            Three
          </button>
          <button
            class="yvebot-message-bubbleBtn"
            data-label=""
            data-value="Four"
          />
          <button
            class="yvebot-message-bubbleBtn"
            data-label="Five"
            data-value="Five"
          >
            Five
          </button>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        disabled=""
        placeholder="Choose an option above"
        rows="1"
      />
      <button
        class="yvebot-form-submit"
        disabled=""
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;

exports[`DOM behaviors user reply with single choice 2`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            Make your choice
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-user"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            One
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        placeholder="Type your message"
        rows="1"
      />
      <button
        class="yvebot-form-submit"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;

exports[`passive support 1`] = `
<body>
  <div
    class="yvebot-chat"
  >
    <ul
      class="yvebot-conversation"
    >
      <li
        class="yvebot-thread yvebot-thread-user"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            help me
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot"
      >
        <div
          class="yvebot-bubble"
        >
          <div
            class="yvebot-message"
          >
            How can I help you?
          </div>
        </div>
      </li>
      <li
        class="yvebot-thread yvebot-thread-bot yvebot-thread-typing"
      >
        <div
          class="yvebot-typing"
        >
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
          <span
            class="yvebot-typing-dot"
          />
        </div>
      </li>
    </ul>
    <form
      class="yvebot-form"
    >
      <textarea
        class="yvebot-form-input"
        placeholder="Type your message"
        rows="1"
        style="height: 0px;"
      />
      <button
        class="yvebot-form-submit"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</body>
`;
